# node-xlsxwriter

./: .gitignore  .npmignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: publish.yml
benchmark/: bench_100.js  bench_1000.js  bench_10_000.js  dry_run.js  package-lock.json  package.json  setup.js
javascript/docs/: conditional_format.example.js  dynamic_formula.example.js  formula.example.js  table.js
javascript/docs/conditional_format/: average.example.js  cell.example.js  data_bar.example.js  duplicate.example.js  formula.example.js  icon_set.example.js  three_color_scale.example.js  two_color_scale.example.js
javascript/src/: index.js  utils.js
javascript/src/models/: border.js  cell.js  color.js  conditional_format.js  format.js  formula.js  link.js  merged_cell.js  sheet.js  table.js  workbook.js
javascript/test/: formula.spec.js  merged-cells.spec.js  mjs.spec.mjs  table.spec.js  util.js  write-to-base64.spec.js  write-to-buffer.spec.js  write-to-buffer.spec.mjs  write-to-file.spec.js
javascript/test/conditional_format/: average.spec.js  blank.spec.js  cell.spec.js  data_bar.spec.js  date.spec.js  duplicate.spec.js  formula.spec.js  icon-set.spec.js  text.spec.js  three_color_scale.spec.js  top.spec.js  two_color_scale.spec.js
javascript/types/src/: index.d.ts  utils.d.ts  utils.d.ts.map
javascript/types/src/models/: border.d.ts  (+21 more)
rust/src/: lib.rs
rust/src/node_xlsx/: border.rs  cell.rs  cell_range.rs  color.rs  error.rs  format.rs  mod.rs  sheet.rs  types.rs
test/: write-to-buffer.spec.mjs
(+25 files in other folders)
